--- a/cadastro/cadastro.css
+++ b/cadastro/cadastro.css
@@ -13,10 +13,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 10px;
 
 }
 .box{
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(255, 255, 255);
     box-shadow: 5px 5px 5px 5px black;
     width: 40vw;
     height: 90vh;
@@ -27,4 +28,34 @@
 
 form{
     padding-left: 10%;
+}
+
+#ipessoal{
+    background-color: rgb(207, 207, 207);
+}
+
+input {
+    width: 30vw;
+    height: 5vh;
+}
+
+.mid {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 30vw;
+}
+.mid1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 30vw;
+}
+
+#tam {
+    width: 10vw;
+}
+
+#rigth {
+    margin-right: 6vw;
 }
