--- a/cadastro/templates/cadastro.html
+++ b/cadastro/templates/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="../static/CSS/cadastro.css">
 </head>
 <body>
     <div class="container">
@@ -34,7 +34,9 @@
                     <input type="tel" name="telefone" class="mid1" id="tam"  placeholder="(xx) xxxxx-xxxx">
                 </div>
 
-                <button type="submit" id="bt_cria_cadrastro" >Criar Cadastro</button>
+                <button type="submit" id="bt_cria_cadrastro">Criar Cadastro</button>
+
+                <p id="resultado"></p>
             
             </form>
         </div>
