--- a/site/templates/menu/funcionario.html
+++ b/site/templates/menu/funcionario.html
@@ -6,8 +6,8 @@
     <title>Funcionario</title>
 </head>
 <body>
-    <a href="../menu/Funcionario/consultar.html">Realizar Consulta</a>
-    <a href="../menu/Funcionario/modifica-deleta_cadastro.html">Modificar/deltar Cadastro do Cliente</a>
+    <a href="../menu/Funcionario/consultar.html">Realizar Consulta</a><br>
+    <a href="../menu/Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
     
 </body>
 </html>
