--- a/site/templates/menu/Funcionario/modifica-deleta_cadastro.html
+++ b/site/templates/menu/Funcionario/modifica-deleta_cadastro.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Editar Produto</h2>
-    <form method="post" action="/pesquisar">
+    <h2>Pesquisar Cadastro</h2>
+    <form method="post" action="/modifica-deleta_cadastro">
         <input type="text" name="nome" required placeholder="Nome do Cliente">
 
         <input type="text" name="sobrenome" required placeholder="Sobrenome do Cliente">
@@ -16,13 +16,16 @@
 
         <button type="submit">Pesquisar</button>
 
-        <ul>
-            {% for cliente in clientes %}
-                <li>
-                   Nome: {{cliente.P_nome}} {{cliente.U_nome}} - RG: {{cliente.rg}} Cpf: {{cliente.cpf}} - tel: {{cliente.telefone}}
-                </li>
-            {% endfor %}
-        </ul>
+        {% if clientes_pesquisa %}
+        <h2>Clientes Encontrados:</h2>
+            <ul>
+                {% for cliente in clientes_pesquisa %}
+                    <li>{{ cliente.P_nome }} {{ cliente.U_nome }} - RG: {{ cliente.rg }} - CPF: {{ cliente.cpf }}
+                        <a href="{{ url_for('edit_cliente', rg=cliente.rg) }}">Editar</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
 
     </form>
 </body>
