--- a/site/templates/menu/Funcionario/edit_cliente.html
+++ b/site/templates/menu/Funcionario/edit_cliente.html
@@ -9,16 +9,15 @@
     <form  method="post">
 
         <label for="nome">Nome</label><br><br>
-        <input type="text" name="nome" required value="{{ cliente.P_nome}}"><br><br>
+        <input type="text" name="nome" required value="{{ cliente.pnome}}"><br><br>
 
         <label for="sobrenome">Sobrenome</label><br><br>
-        <input type="text" name="sobrenome"  required value="{{ cliente.U_nome}}"><br><br>
+        <input type="text" name="sobrenome"  required value="{{ cliente.unome}}"><br><br>
 
         <label for="documento_cpf">Documento(CPF)</label><br><br>
         <input type="text" name="documento_cpf"  required value="{{ cliente.cpf}}"><br><br>
 
         <div class="mid">
-            <label for="data_nasc">Data de Nascimento</label>
             <label for="telefone">Telefone</label>
         </div>
 
