--- a/site/templates/menu/Funcionario/modifica-deleta_cadastro.html
+++ b/site/templates/menu/Funcionario/modifica-deleta_cadastro.html
@@ -20,7 +20,7 @@
         <h2>Clientes Encontrados:</h2>
             <ul>
                 {% for cliente in clientes_pesquisa %}
-                    <li>{{ cliente.P_nome }} {{ cliente.U_nome }} - RG: {{ cliente.rg }} - CPF: {{ cliente.cpf }}
+                    <li>{{ cliente.pnome }} {{ cliente.unome }} - RG: {{ cliente.rg }} - CPF: {{ cliente.cpf }}
                         <a href="{{ url_for('edit_cliente', rg=cliente.rg) }}">Editar</a>
                         <a href="{{ url_for('delete_cliente', rg=cliente.rg) }}">Deletar</a>
 
