--- a/site/templates/pagina_principal.html
+++ b/site/templates/pagina_principal.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href="../templates/menu/banco_de_dados.html">Banco de dados</a><br>
-    <a href="../templates/menu/alunos.html">Alunos</a><br>
-    <a href="../templates/menu/conceitos.html">Conceitos</a><br>
-    <a href="../templates/menu/cadastro.html">Casdastrar Cliente</a><br>
-    <a href="../templates/menu/funcionario.html">Funcionario</a><br>
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navbar</title>
+    <link rel="stylesheet" href="../static/CSS/style_paginaprincipal.css" />
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <img src="" alt="">
+        <a class="logo" href="/"><img id="garcia" src="../static/IMAGEM/logo-garcia.png" alt=""></a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="../templates/menu/banco_de_dados.html">Banco de dados</a></li>
+          <li><a href="../templates/menu/alunos.html">Alunos</a></li>
+          <li><a href="../templates/menu/conceitos.html">Conceitos</a></li>
+          <li><a href="../templates/menu/cadastro.html">Casdastrar Cliente</a></li>
+          <li><a href="../templates/menu/funcionario.html">Funcionario</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <script src="../static/JS/pagina_principal.js"></script>
+  </body>
 </html>
