--- a/site/templates/menu/Funcionario/consultar.html
+++ b/site/templates/menu/Funcionario/consultar.html
@@ -6,18 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../templates/menu/Funcionario/consultas/cidades_cadastradas.html">Consultar Cidades Cadastradas</a>
-    <a href="../templates/menu/Funcionario/consultas/consulta_cadastro.html">Consultar Cadastro</a>
-    <a href="../templates/menu/Funcionario/consultas/consultar_funcionario.html">Consultar Funcionarios</a>
-    <a href="../templates/menu/Funcionario/consultas/consultar_viagem.html">Consultar Viagem</a>
-    <a href="../templates/menu/Funcionario/consultas/empresa_e_sede.html">Consultar Empresa</a>
-    <a href="../templates/menu/Funcionario/consultas/funcionario_e_sua_cidade.html">Consultar Funcionario/Cidade</a>
-    <a href="../templates/menu/Funcionario/consultas/motorista_viagem_onibus.html">Consultar Viagem/Motorista/Onibus</a>
-    <a href="../templates/menu/Funcionario/consultas/onibus_e_empresa.html">Consultar Onibus</a>
-    <a href="../templates/menu/Funcionario/consultas/passageiros_da_viagem.html">Consultar Passagem</a>
-    <a href="../templates/menu/Funcionario/consultas/todos_os_bilhetes_do_cliente.html">Consultar Bilhetes do Cliente</a>
-    <a href="../templates/menu/Funcionario/consultas/todos_os_bilhetes_do_funcionario.html">Consultar Bilhetes Vendidos pelo Funcionario</a>
-    <a href="../templates/menu/Funcionario/consultas/todos_os_clientes_por_ano.html">Consultar Bilhetes do Ultimo Ano</a>
+    <a href="../../menu/Funcionario/consultas/cidades_cadastradas.html">Consultar Cidades Cadastradas</a>
+    <a href="../../menu/Funcionario/consultas/consulta_cadastro.html">Consultar Cadastro</a>
+    <a href="../../menu/Funcionario/consultas/consultar_funcionario.html">Consultar Funcionarios</a>
+    <a href="../../menu/Funcionario/consultas/consultar_viagem.html">Consultar Viagem</a>
+    <a href="../../menu/Funcionario/consultas/empresa_e_sede.html">Consultar Empresa</a>
+    <a href="../../menu/Funcionario/consultas/funcionario_e_sua_cidade.html">Consultar Funcionario/Cidade</a>
+    <a href="../../menu/Funcionario/consultas/motorista_viagem_onibus.html">Consultar Viagem/Motorista/Onibus</a>
+    <a href="../../menu/Funcionario/consultas/onibus_e_empresa.html">Consultar Onibus</a>
+    <a href="../../menu/Funcionario/consultas/passageiros_da_viagem.html">Consultar Passagem</a>
+    <a href="../../menu/Funcionario/consultas/todos_os_bilhetes_do_cliente.html">Consultar Bilhetes do Cliente</a>
+    <a href="../../menu/Funcionario/consultas/todos_os_bilhetes_do_funcionario.html">Consultar Bilhetes Vendidos pelo Funcionario</a>
+    <a href="../../menu/Funcionario/consultas/todos_os_clientes_por_ano.html">Consultar Bilhetes do Ultimo Ano</a>
 
 </body>
 </html>
