--- a/site/templates/menu/Funcionario/consultas/consulta_cadastro.html
+++ b/site/templates/menu/Funcionario/consultas/consulta_cadastro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Pesquisar Cadastro</h2>
-    <form method="post" action="/modifica-deleta_cadastro">
+    <form method="post" action="/consulta_cadastro">
         <input type="text" name="nome" placeholder="Nome do Cliente">
 
         <input type="text" name="sobrenome" placeholder="Sobrenome do Cliente">
