--- a/site/templates/menu/alunos.html
+++ b/site/templates/menu/alunos.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Nomes dos alunos</h1>
+    <p>Gabriel Vasco, 2441039</p>
+    <p>Eduardo Pinheiro, 2461242</p>
+    <p>Enzo Gabriel, 2461250</p>
+    <p>Julia Stela, 2461293</p>
+
 </body>
 </html>
