--- a/site/templates/menu/banco_de_dados.html
+++ b/site/templates/menu/banco_de_dados.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>MOSTRAR O DIAGRAMA DO BANCO DE DADOS</h1>
+    <div>
+        <img id="img1" src="../../static/IMAGEM/imagem_bd.png" alt="">
+
+    </div>
 </body>
 </html>
