--- a/site/templates/menu/alunos.html
+++ b/site/templates/menu/alunos.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alunos</title>
+
+    <style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+    
+    *{
+       margin: 0;
+       padding: 0;
+       box-sizing: border-box;
+       font-family: "Poppins", sans-serif;}
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+      flex-direction: column;}.back-link {
+      margin-top: 20px;
+      text-decoration: none;
+      color: #333;
+      display: inline-block;
+      padding: 10px 15px;
+      border: 1px solid #333;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;}.back-link:hover {
+      background-color: #333;
+      color: #fff;
+    }
+      </style>
+
 </head>
 <body>
-    <h1>Nomes dos alunos</h1>
-    <p>Gabriel Vasco, 2441039</p>
-    <p>Eduardo Pinheiro, 2461242</p>
-    <p>Enzo Gabriel, 2461250</p>
-    <p>Julia Stela, 2461293</p>
+    <div>
+        <h1>Nome dos alunos</h1>
+        <p>Gabriel Vasco, 2441039</p>
+        <p>Eduardo Pinheiro, 2461242</p>
+        <p>Enzo Gabriel, 2461250</p>
+        <p>Julia Stela, 2461293</p>
 
+        <a href="javascript:history.back()" class="back-link">&#8592; Voltar</a>
+    </div>
 </body>
 </html>
