--- a/site/static/CSS/style_paginaprincipal.css
+++ b/site/static/CSS/style_paginaprincipal.css
@@ -18,7 +18,7 @@ body {
   transition: all 0.5s ease;
 }
 body.dark {
-  background-image: url(../IMAGEM/dark3.png);
+  background-image: url(../IMAGEM/dark.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
