--- a/site/templates/menu/banco_de_dados.html
+++ b/site/templates/menu/banco_de_dados.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>MOSTRAR O DIAGRAMA DO BANCO DE DADOS</h1>
+    <img src="../../static/IMAGEM/imagem_bd.png" alt="">
 </body>
 </html>
