--- a/site/templates/pagina_principal.html
+++ b/site/templates/pagina_principal.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../static/CSS/style_paginaprincipal.css" />
   </head>
   <body>
+
     <!-- navbar -->
     <nav class="navbar">
       <div class="logo_item">
@@ -17,11 +18,12 @@
       <div class="navbar_content">
         <i class="bi bi-grid"></i>
         <i class='bx bx-sun' id="darkLight"></i>
-        <a href="../templates/menu/cadastro.html">Cadastrar-se</a>
+        <a id="cadast" href="../templates/menu/cadastro.html">Cadastrar-se</a>
       </div>
 
     </nav>
     <div>oi</div>
+
     <!-- sidebar -->
     <nav class="sidebar">
       <div class="menu_content">
@@ -50,9 +52,13 @@
               <i class="bx bx-chevron-right arrow-left"></i>
             </div>
             <ul class="menu_items submenu">
-              <a href="../templates/acesso_funcionario.html" class="nav_link sublink">Login Funcionario</a>
+              <a href="../templates/acesso_funcionario.html" class="nav_link sublink" > Funcionario</a>
+              <a href="../templates/menu/Funcionario/consultas/consulta_viagem.html"  class="nav_link sublink" > Viagem</a>
+              <a href="../templates/menu/Funcionario/consultas/onibus_e_empresa.html"  class="nav_link sublink" > Onibus</a>
+              <a href="../templates/menu/Funcionario/consultas/cidades_cadastradas.html"  class="nav_link sublink"> Cidades </a>
             </ul>
           </li>
+
         <!-- Fecha e Abre a navbar -->
         <div class="bottom_content">
           <div class="bottom expand_sidebar">
