--- a/site/templates/menu/banco_de_dados.html
+++ b/site/templates/menu/banco_de_dados.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco de Dados</title>
+    <style> 
+    *{
+        font-family: "Poppins", sans-serif;
+    }
+    </style>
 </head>
 <body>
-    <h1>MOSTRAR O DIAGRAMA DO BANCO DE DADOS</h1>
+    <h1>DIAGRAMA DO BANCO DE DADOS</h1>
     <img src="../../static/IMAGEM/imagem_bd.png" alt="">
 </body>
 </html>
