--- a/site/templates/menu/Funcionario/consultas/cidades_cadastradas.html
+++ b/site/templates/menu/Funcionario/consultas/cidades_cadastradas.html
@@ -67,10 +67,13 @@
             padding: 0;
             text-align: left;
             color: var(--grey-color);
+            padding-left: -30vw;
         }
 
         li {
             margin-bottom: 10px;
+            text-align: left;
+            padding-left: -30vw;
         }
 
         .back-link {
@@ -82,6 +85,7 @@
             border: 1px solid var(--grey-color);
             border-radius: 5px;
             transition: background-color 0.3s ease;
+           
         }
 
         .back-link:hover {
