--- a/site/templates/menu/funcionario.html
+++ b/site/templates/menu/funcionario.html
@@ -6,8 +6,95 @@
     <title>Funcionario</title>
 </head>
 <body>
-    <a href="../menu/Funcionario/consultar.html">Realizar Consulta</a><br>
-    <a href="../menu/Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
     
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login funcionario</title>
+
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
+        :root {
+            --white-color: #fff;
+            --blue-color: #76add0;
+            --grey-color: #707070;
+            --grey-color-light: #aaa;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Poppins", sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            flex-direction: column;
+            background-color: var(--grey-color-back);
+        }
+
+        h2 {
+            font-weight: 500;
+            margin-bottom: 20px;
+            color: var(--blue-color);
+        }
+
+        a {
+            text-decoration: none;
+            color: var(--grey-color);
+            border: 1px solid var(--grey-color);
+            border-radius: 3px;
+            
+        }
+        a:hover {
+            background-color: var(--grey-color);
+            color: var(--white-color);
+        }
+
+        #consulta {
+            width: 15vw;
+            height: 3vh;
+        }
+
+        #delete{
+            width: 25vw;
+            height: 3vh;
+
+        }
+
+
+        .back-link {
+            margin-top: 20px;
+            text-decoration: none;
+            color: var(--grey-color);
+            display: inline-block;
+            padding: 10px 15px;
+            border: 1px solid var(--grey-color);
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .back-link:hover {
+            background-color: var(--grey-color);
+            color: var(--white-color);
+        }
+    </style>
+</head>
+<body>
+    <h2>Funcões:</h2>
+    <a id="consulta" href="../menu/Funcionario/consultar.html">Realizar Consulta</a><br>
+    <a id="delete" href="../menu/Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
+    <a href="javascript:history.back()" class="back-link">&#8592; Voltar</a>
 </body>
 </html>
