--- a/site/templates/menu/funcionario.html
+++ b/site/templates/menu/funcionario.html
@@ -95,6 +95,6 @@
     <h2>Funcões:</h2>
     <a id="consulta" href="../menu/Funcionario/consultar.html">Realizar Consulta</a><br>
     <a id="delete" href="../menu/Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
-    <a href="javascript:history.back()" class="back-link">&#8592; Voltar</a>
+    <a href="javascript:history.back()" class="back-link">&#8592; Voltar</a>=
 </body>
 </html>
