--- a/site/templates/menu/Funcionario/consultas/cidades_cadastradas.html
+++ b/site/templates/menu/Funcionario/consultas/cidades_cadastradas.html
@@ -67,7 +67,7 @@
             padding: 0;
             text-align: left;
             color: var(--grey-color);
-            padding-left: -30vw;
+            margin-left: -30vw;
         }
 
         li {
