--- a/site/templates/pagina_principal.html
+++ b/site/templates/pagina_principal.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <title>Side Navigation Bar in HTML CSS JavaScript</title>
+    <title>pagina_principal</title>
     <link rel="stylesheet" href="../static/CSS/style_paginaprincipal.css" />
   </head>
   <body>
@@ -27,7 +27,6 @@
     <nav class="sidebar">
       <div class="menu_content">
         <ul class="menu_items">
-          <div class="menu_title menu_dahsboard"></div>
           <li class="item">
             <div href="#" class="nav_link submenu_item">
               <span class="navlink_icon">
