--- a/site/templates/menu/funcionario.html
+++ b/site/templates/menu/funcionario.html
@@ -3,18 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funcionario</title>
-</head>
-<body>
-    
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login funcionario</title>
 
     <style>
@@ -93,8 +81,8 @@
 </head>
 <body>
     <h2>Funcões:</h2>
-    <a id="consulta" href="../menu/Funcionario/consultar.html">Realizar Consulta</a><br>
-    <a id="delete" href="../menu/Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
+    <a id="consulta" href="Funcionario/consultar.html">Realizar Consulta</a><br>
+    <a id="delete" href="Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
     <a href="javascript:history.back()" class="back-link">&#8592; Voltar</a>
 </body>
 </html>
