modifição no caminho

--- a/site/templates/menu/funcionario.html
+++ b/site/templates/menu/funcionario.html
@@ -55,6 +55,11 @@
             height: 3vh;
         }
 
+        #editar_cadastro {
+            width: 14vw;
+            height: 3vh;
+        }
+
         #delete{
             width: 25vw;
             height: 3vh;
@@ -81,8 +86,9 @@
 </head>
 <body>
     <h2>Funcões:</h2>
-    <a id="consulta" href="Funcionario/consultar.html">Realizar Consulta</a><br>
-    <a id="delete" href="Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
+    <a id="consulta" href="../../templates/menu/Funcionario/consultar.html">Realizar Consulta</a><br>
+    <a id="editar_cadastro" href="../../templates/menu/Funcionario/edit_cliente.html">Editar Cadastro</a><br>
+    <a id="delete" href="../../templates/menu/Funcionario/modifica-deleta_cadastro.html">Modificar/deletar Cadastro do Cliente</a>
     <a href="javascript:history.back()" class="back-link">&#8592; Voltar</a>
 </body>
 </html>
