--- a/site/templates/pagina_principal.html
+++ b/site/templates/pagina_principal.html
@@ -36,9 +36,9 @@
               <i class="bx bx-chevron-right arrow-left"></i>
             </div>
             <ul class="menu_items submenu">
-              <a href="../templates/menu/banco_de_dados.html" class="nav_link sublink">Banco de Dados</a>
-              <a href="../templates/menu/alunos.html" class="nav_link sublink">Alunos</a>
-              <a href="../templates/menu/conceitos.html" class="nav_link sublink">Conceitos</a>
+              <a href="menu/banco_de_dados.html" class="nav_link sublink">Banco de Dados</a>
+              <a href="menu/alunos.html" class="nav_link sublink">Alunos</a>
+              <a href="menu/conceitos.html" class="nav_link sublink">Conceitos</a>
             </ul>
           </li>
           <li class="item">
