--- a/site/templates/menu/Funcionario/consultar.html
+++ b/site/templates/menu/Funcionario/consultar.html
@@ -10,14 +10,14 @@
     <a href="../../menu/Funcionario/consultas/consulta_cadastro.html">Consultar Cadastro</a><br><br>
     <a href="../../menu/Funcionario/consultas/consulta_funcionario.html">Consultar Funcionarios</a><br><br>
     <a href="../../menu/Funcionario/consultas/consulta_viagem.html">Consultar Viagem</a><br><br>
-    <a href="../../menu/Funcionario/consultas/empresa_e_sede.html">Consultar Empresa</a><br><br>
+    <a href="../../menu/Funcionario/consultas/empresas_e_sede.html">Consultar Empresa</a><br><br>
     <a href="../../menu/Funcionario/consultas/funcionario_e_sua_cidade.html">Consultar Funcionario/Cidade</a><br><br>
     <a href="../../menu/Funcionario/consultas/motorista_viagem_onibus.html">Consultar Viagem/Motorista/Onibus</a><br><br>
     <a href="../../menu/Funcionario/consultas/onibus_e_empresa.html">Consultar Onibus</a><br><br>
     <a href="../../menu/Funcionario/consultas/passageiros_da_viagem.html">Consultar Passagem</a><br><br>
     <a href="../../menu/Funcionario/consultas/todos_os_bilhetes_do_cliente.html">Consultar Bilhetes do Cliente</a><br><br>
     <a href="../../menu/Funcionario/consultas/todos_os_bilhetes_do_funcionario.html">Consultar Bilhetes Vendidos pelo Funcionario</a><br><br>
-    <a href="../../menu/Funcionario/consultas/todos_os_clientes_por_ano.html">Consultar Bilhetes do Ultimo Ano</a><br><br>
+    <a href="../../menu/Funcionario/consultas/todos_os_clientes_por_data.html">Consultar Bilhetes do Ultimo Data</a><br><br>
 
 </body>
 </html>
