--- a/site/templates/menu/Funcionario/consultas/consulta_viagem.html
+++ b/site/templates/menu/Funcionario/consultas/consulta_viagem.html
@@ -46,6 +46,8 @@
             font-family: "Poppins", sans-serif;
             font-size: 16px;
             margin-bottom: 10px;
+            height: 3vh;
+            border: 1px solid --grey-color;
         }
 
         button[type="submit"] {
